ENEX FSL/snapshotDownload (1)/objects/WorkType.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ReadWrite</externalSharingModel><fields><fullName>Cita_de_servicio__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Cita de servicio</label><referenceTo>ServiceAppointment</referenceTo><relationshipLabel>Tipos de trabajos</relationshipLabel><relationshipName>Tipos_de_trabajos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Es_Falla__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Es Falla?</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Due_Date_Offset__c</fullName><deprecated>false</deprecated><description>Minutes</description><externalId>false</externalId><inlineHelpText>Calcula la fecha de vencimiento agregando minutos a la hora de creación del servicio, lo que refleja el SLA interno de la organización</inlineHelpText><label>Due Date Offset</label><precision>9</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Exact_Appointments__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Exact Appointments</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><listViews><fullName>All_WorkTypes</fullName><columns>Name</columns><columns>EstimatedDuration</columns><columns>DurationType</columns><columns>Es_Falla__c</columns><filterScope>Everything</filterScope><label>Todos los Tipos de trabajos</label><language>es</language></listViews><listViews><fullName>My_WorkTypes</fullName><filterScope>Mine</filterScope><label>Mis Tipos de trabajos</label></listViews><listViews><fullName>Tipo_de_Trabajo_MDA</fullName><columns>Name</columns><columns>EstimatedDuration</columns><columns>DurationType</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkType.Tipo_de_Trabajo_MDA</value></filters><label>Tipo de Trabajo MDA</label><sharedTo><role>Administrador_MDA</role></sharedTo></listViews><listViews><fullName>Tipo_de_Trabajo_SGME</fullName><columns>Name</columns><columns>EstimatedDuration</columns><columns>DurationType</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkType.Tipo_de_Trabajo_SGME</value></filters><label>Tipo de Trabajo SGME</label><language>es</language><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>Tipos_de_Trabajo_SGMM</fullName><columns>Name</columns><columns>EstimatedDuration</columns><columns>DurationType</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkType.Tipo_de_Trabajo_SGMM</value></filters><label>Tipos de Trabajo SGMM</label><language>es</language><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>Tipo_de_Trabajo_MDA</fullName><active>true</active><label>Tipo de Trabajo MDA</label></recordTypes><recordTypes><fullName>Tipo_de_Trabajo_SGME</fullName><active>true</active><label>Tipo de Trabajo SGME</label></recordTypes><recordTypes><fullName>Tipo_de_Trabajo_SGMM</fullName><active>true</active><label>Tipo de Trabajo SGMM</label></recordTypes><sharingModel>ReadWrite</sharingModel></CustomObject>